<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin">

    <include
        android:id="@+id/header"
        layout="@layout/include_screen_header" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/card_spacing"
        android:background="@drawable/bg_viewfinder">

        <TextView
            style="@style/Text.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="16dp"
            android:gravity="center"
            android:textColor="@color/text_disabled"
            android:text="@string/vin_camera_placeholder" />

        <FrameLayout
            android:id="@+id/vin_frame"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_vin_frame">

            <TextView
                android:id="@+id/vin_preview"
                style="@style/Text.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:letterSpacing="0.1"
                android:textColor="@color/text_disabled" />

            <View
                android:id="@+id/vin_scan_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/bg_scan_line" />
        </FrameLayout>

        <TextView
            style="@style/Text.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/vin_position_hint" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_scan"
        style="@style/Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/card_spacing"
        android:text="@string/action_scan" />

    <TextView
        android:id="@+id/btn_manual_vin"
        style="@style/Text.Caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="@color/redline_red"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/action_manual_vin" />

</LinearLayout>
